@@ -1,0 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST gmqcc-0.2.2.tar.gz 163690 SHA256 10ca496f0dc7565a1f2a2ee11ffff5fb50b95620ed75f210a7eb18f803913a9b SHA512 5b59f13167178e8e09e9480f7957a893e001eeb2460e33e9fe107c97da78c596989d82d5717279380c1c9e8086457184be8fdc3434394adb578d119137265da7 WHIRLPOOL 1d4059d57eda7d54fcc661fc2900cd35a791bc739f1e7b7c789d7a7c381521aa66a15621c270d60d5ad625657f24a3bb8bd92b45b8a4300078864308bbf3f8b5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlFwN9UACgkQz+A7F6AY3owT4gEAsvNqzjXA/pmj/Ho6uPMalZhc
+9kCGNDZm+tt7x4ZokZ8A/juOwAsdabDyWPWh09cw0PmcYl94Rc3vCe+KI7+WGWhC
+=VErr
+-----END PGP SIGNATURE-----
